Fix navbar overlap by adding padding-top to main content area

--- a/styles.css
+++ b/styles.css
@@ -140,6 +140,7 @@ html {
     flex-direction: column;
     width: 100vw;
     height: 220vh;
+    padding-top: 120px;
 }
 
 .normaltext {
